--- a/src/app/modules/self-service/dashboard/dashboard.component.html
+++ b/src/app/modules/self-service/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <div class="" style="margin: -25px;">
     <div style="height: 250px;" class="bg-primary dashboard-header">
-        Dashboard
+        Employee Dashboard
     </div>
     <div class="">
-        <div class="row card-container">
+        <div class="row card-container" >
             <div class="col-md-8" style="display: flex; flex-direction: column;">
 
                 <div class="card" style="margin-right: 2px;">
