--- a/src/app/modules/self-service/dashboard/dashboard.component.scss
+++ b/src/app/modules/self-service/dashboard/dashboard.component.scss
@@ -23,7 +23,8 @@ h6{
 }
 
 .card-container > div{
-    padding: 5px;
+    padding: 20px;
+    border-radius: 4px;
 }
 .card-container > div > .card{
     margin: 36px;
