--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -4,7 +4,7 @@
 
 <ngx-componentsheader
   pageName="Loan Request"
-  [requiredButton]="[{name:'submit', label:'Submit'}]" (buttonClick)="makeLoanRequest()"
+  [requiredButton]="[{name:'summary', label:'Get Loan Summary'}, {name:'repayment', label:'Get Repayment Schedule'}]" (buttonClick)="makeLoanRequest()"
 ></ngx-componentsheader>
 
 <!-- <div *ngIf="loansCounter < 1 && pageNo == 1">
@@ -77,7 +77,7 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <select class="form-control" name="loanType" [(ngModel)]="loanModel.loanTypeId">
+                    <select class="form-control" name="loanType" [(ngModel)]="singleLoanData.loanTypeId">
                       <option value="">--Select Loan Type--</option>
                       <option *ngFor="let myType of allloanTypes" [value]="myType.id">{{ myType.name }}</option>
                     </select>
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="col-sm-6">
-                      <select class="form-control" name="loanType" #loanType="ngModel" [(ngModel)]="loanModel.interestTypeId">
+                      <select class="form-control" name="loanType" #loanType="ngModel" [(ngModel)]="singleLoanData.interestTypeId">
                         <option value="">--Select Interest Type--</option>
                         <option *ngFor="let interest of allInterestRates" [value]="interest.id">{{ interest.description }}</option>
                       </select>
@@ -102,7 +102,7 @@
                     <label for="">Effective Date</label>
                   </div>
                   <div class="col-sm-6">
-                    <ngx-date [(value)]="loanModel.effectiveDate"></ngx-date>
+                    <ngx-date [(value)]="singleLoanData.effectiveDate"></ngx-date>
                   </div>
 
                 </div>
@@ -112,7 +112,7 @@
                     <label for="">Requested Amount</label>
                   </div>
                   <div class="col-sm-6">
-                    <app-amount-input [(value)]="loanModel.requestedAmount"></app-amount-input>
+                    <app-amount-input [(value)]="singleLoanData.requestedAmount"></app-amount-input>
                   </div>
 
                 </div>
@@ -123,7 +123,7 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <input class="form-control" type="number" name="tenor" #tenor="ngModel" [(ngModel)]="loanModel.requestedTenor" placeholder="12">
+                    <input class="form-control" type="number" name="tenor" #tenor="ngModel" [(ngModel)]="singleLoanData.requestedTenor" placeholder="12">
                   </div>
 
                 </div>
@@ -133,7 +133,7 @@
                     <label for="">Maturity Date</label>
                   </div>
                   <div class="col-sm-6">
-                    <ngx-date [(value)]="loanModel.strMaturityDate"></ngx-date>
+                    <ngx-date [(value)]="singleLoanData.strMaturityDate"></ngx-date>
                   </div>
                 </div>
 
@@ -143,8 +143,8 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <textarea name="customQuestion" #customQuestion="ngModel" [(ngModel)]="loanModel.customQuestion" cols="60" rows="10"></textarea>
-                    <ngx-wysisyg-input [(value)]="loanModel.customAnswer" style="padding-left: -10px;" ></ngx-wysisyg-input>
+                    <textarea name="customQuestion" #customQuestion="ngModel" [(ngModel)]="singleLoanData.customQuestion" cols="60" rows="10"></textarea>
+                    <ngx-wysisyg-input [(value)]="singleLoanData.customAnswer" style="padding-left: -10px;" ></ngx-wysisyg-input>
                   </div>
 
                 </div> -->
@@ -155,8 +155,8 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <textarea name="customAnswer" #customAnswer="ngModel" [(ngModel)]="loanModel.customAnswer" cols="40" rows="10"></textarea>
-                    <!-- <ngx-wysisyg-input [(value)]="loanModel.customAnswer" style="padding-left: -10px;" ></ngx-wysisyg-input> -->
+                    <textarea name="customAnswer" #customAnswer="ngModel" [(ngModel)]="singleLoanData.customAnswer" cols="40" rows="10"></textarea>
+                    <!-- <ngx-wysisyg-input [(value)]="singleLoanData.customAnswer" style="padding-left: -10px;" ></ngx-wysisyg-input> -->
                   </div>
 
                 </div>
@@ -167,8 +167,8 @@
                   </div>
 
                   <div class="col-sm-6">
-                    <textarea name="justification" #justification="ngModel" [(ngModel)]="loanModel.justification" cols="40" rows="10"></textarea>
-                    <!-- <ngx-wysisyg-input [(value)]="loanModel.justification" style="padding-left: -10px;" ></ngx-wysisyg-input> -->
+                    <textarea name="justification" #justification="ngModel" [(ngModel)]="singleLoanData.justification" cols="40" rows="10"></textarea>
+                    <!-- <ngx-wysisyg-input [(value)]="singleLoanData.justification" style="padding-left: -10px;" ></ngx-wysisyg-input> -->
                   </div>
                 </div>
 
